feat(auth): implement auth for group-users
- Add User entity
- Implement AuthController and AuthService for login and register features
- Implement JwtService to generate token after login success
- Configure security: allow public access for login and register APIs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+jwt.secret=${SECRET_KEY}
