--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ jwt.secret=${SECRET_KEY}
 #config redis
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT}
-spring.data.type=redis
+spring.cache.type=redis
