--- a/compose.yaml
+++ b/compose.yaml
@@ -2,4 +2,7 @@ services:
   redis:
     image: redis:7.4.2
     ports:
-      - "6379:6379"
+      - "127.0.0.1:6379:6379"
+    command: redis-server --requirepass ${REDIS_PASSWORD}
+    env_file:
+      - .env
