chore(pom.xml): add embedded Redis dependency for integration testing

--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,14 @@
 			<optional>true</optional>
 		</dependency>
 
+		<dependency>
+			<groupId>com.github.codemonstur</groupId>
+			<artifactId>embedded-redis</artifactId>
+			<version>1.4.2</version>
+			<scope>test</scope>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
